package MPS.sandbox.Java_Model;

/*Generated by MPS */


public class Script {
  private String name;


  public Script(String name) {
    this.name = name;
  }
}
